--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-crotte de bique
-<!--router-outlet></router-outlet-->
+Angular component
+<nav>
+    <ul>
+        <li><a routerLink="/testA" routerLinkActive="active">First Component</a></li>
+        <li><a routerLink="/testB" routerLinkActive="active">Second Component</a></li>
+    </ul>
+</nav>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
